--- a/Aurorion/src/SDL2_image-2.6.3/CHANGES.txt
+++ b/Aurorion/src/SDL2_image-2.6.3/CHANGES.txt
@@ -188,7 +188,7 @@ Marc Le Douarain - Sun, 22 Dec 2002 22:59:51 +0100
 Sam Lantinga - Sun Oct 20 20:55:46 PDT 2002
  * Added shared library support for MacOS X
 Pete Shinners - Thu Jun 20 10:05:54 PDT 2002
- * The JPEG loader can now load EXIF format JPEG images
+ * The JPEG loader can now Load EXIF format JPEG images
 Dag-Erling Smorgrav - Thu May  2 19:09:48 PDT 2002
  * The XCF loader now ignores invisible layers and channels
 
